<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>uk.ac.ox.cs.pdq</groupId>
	<artifactId>pdq-gui</artifactId>
	<version>1.0.0-Beta</version>
	<name>PDQ GUI application</name>
	<url>http://www.cs.ox.ac.uk/pdq/</url>
	<description>This library features packages and classes PDQ's user interface.</description>
	<build>
		<sourceDirectory>main/src</sourceDirectory>
		<testSourceDirectory>test/src</testSourceDirectory>
		<resources>
			<resource>
				<directory>main/src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>main/src/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*</include>
				</includes>
			</resource>
			<resource>
				<directory>main/src/resources</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>**/*</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<groupId>org.apache.maven.plugins</groupId>
				<version>2.4.1</version>
				<executions>
					<execution>
						<id>make-executable-jar-with-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<archive>
								<manifest>
									<addClasspath>true</addClasspath>
									<mainClass>uk.ac.ox.cs.pdq.ui.GuiMain</mainClass>
								</manifest>
							</archive>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.2</version>
				<configuration>
					<mainClass>main/src/uk/ac/ox/cs/pdq/ui/PDQApplication.java</mainClass>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<organization>
		<name>Oxford University - Department of Computer Science</name>
		<url>http://www.cs.ox.ac.uk/</url>
	</organization>

	<repositories>
		<repository>
			<id>mavenlocal</id>
			<name>mavenlocal repository</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</repository>
	</repositories>
		<dependencies>
			<dependency>
				<groupId>uk.ac.ox.cs.pdq</groupId>
				<artifactId>pdq-common</artifactId>
			</dependency>
			<dependency>
				<groupId>uk.ac.ox.cs.pdq</groupId>
				<artifactId>pdq-datasources</artifactId>
			</dependency>
		
			<dependency>
				<groupId>com.jolira</groupId>
				<artifactId>onejar-maven-plugin</artifactId>
				<version>1.4.4</version>
				<type>maven-plugin</type>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.prefuse</groupId>
				<artifactId>prefuse</artifactId>
				<version>beta-20071021</version>
			</dependency>
			<dependency>
				<groupId>org.antlr</groupId>
				<artifactId>antlr4</artifactId>
				<version>4.7.2</version>
			</dependency>
			<dependency>
				<groupId>com.beust</groupId>
				<artifactId>jcommander</artifactId>
				<version>1.35</version>
			</dependency>
			<dependency>
				<groupId>uk.ac.ox.cs.pdq</groupId>
				<artifactId>pdq-runtime</artifactId>
			</dependency>
			<dependency>
				<groupId>uk.ac.ox.cs.pdq</groupId>
				<artifactId>pdq-planner</artifactId>
			</dependency>
			<dependency>
				<groupId>uk.ac.ox.cs.pdq</groupId>
				<artifactId>pdq-reasoning</artifactId>
			</dependency>
			<dependency>
				<groupId>uk.ac.ox.cs.pdq</groupId>
				<artifactId>pdq-regression</artifactId>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-base</artifactId>
				<version>11.0.2</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-controls</artifactId>
				<version>11.0.2</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-graphics</artifactId>
				<version>11.0.2</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-fxml</artifactId>
				<version>11.0.2</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-web</artifactId>
				<version>11.0.2</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-swing</artifactId>
				<version>11.0.2</version>
			</dependency>
		</dependencies>
	<dependencyManagement>
		<dependencies>
		 	<dependency>
		        <groupId>uk.ac.ox.cs.pdq</groupId>
		        <artifactId>pdq-common</artifactId>
		        <type>test-jar</type>
		        <version>1.0.0-Beta</version>
		        <scope>test</scope>
		    </dependency>		
			<dependency>
				<groupId>uk.ac.ox.cs.pdq</groupId>
				<artifactId>pdq-common</artifactId>
				<version>1.0.0-Beta</version>
			</dependency>
			<dependency>
				<groupId>uk.ac.ox.cs.pdq</groupId>
				<artifactId>pdq-datasources</artifactId>
				<version>1.0.0-Beta</version>
			</dependency>
			<dependency>
				<groupId>uk.ac.ox.cs.pdq</groupId>
				<artifactId>pdq-planner</artifactId>
				<version>1.0.0-Beta</version>
			</dependency>
			<dependency>
				<groupId>uk.ac.ox.cs.pdq</groupId>
				<artifactId>pdq-runtime</artifactId>
				<version>1.0.0-Beta</version>
			</dependency>
			<dependency>
				<groupId>uk.ac.ox.cs.pdq</groupId>
				<artifactId>pdq-reasoning</artifactId>
				<version>1.0.0-Beta</version>
			</dependency>
			<dependency>
				<groupId>uk.ac.ox.cs.pdq</groupId>
				<artifactId>pdq-regression</artifactId>
				<version>1.0.0-Beta</version>
			</dependency>
			
		</dependencies>
	</dependencyManagement>		
	<packaging>jar</packaging>
</project>
